force-app/src/objects/TR1__Master_Skills_Translation__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Master_Skill__c</fullName>
        <label>Master Skill</label>
        <referenceTo>TR1__Master_Skill__c</referenceTo>
        <relationshipLabel>Master Skills Translations</relationshipLabel>
        <relationshipName>Master_Skills_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Translated_Value__c</fullName>
        <label>Translated Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Master Skills Translation</label>
    <nameField>
        <displayFormat>MS-T-{0000000000}</displayFormat>
        <label>Master Skills Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Skills Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>